--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "buffer": "^6.0.3",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "obs-websocket-js": "^4.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -50,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
     "gh-pages": "^3.2.3"
   }
 }
