--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "buffer": "^6.0.3",
+    "chart.js": "^3.7.1",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "obs-websocket-js": "^4.0.3",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
